// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AwesomeButton should render 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "relative",
      },
      Object {
        "height": 60,
        "width": 200,
      },
      null,
    ]
  }
  testID="aws-btn-content-view"
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.15)",
        "borderRadius": 4,
        "bottom": -2,
        "height": 56,
        "left": 2,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": 196,
      }
    }
    testID="aws-btn-shadow"
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#9f9f9f",
          "borderRadius": 4,
          "height": 56,
          "width": 200,
        },
      ]
    }
    testID="aws-btn-bottom"
  />
  <View
    style={
      Object {
        "borderRadius": 4,
        "height": 56,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": 200,
      }
    }
    testID="aws-btn-content"
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "overflow": "hidden",
            "zIndex": 3,
          },
          Object {
            "backgroundColor": "#c0c0c0",
            "borderColor": null,
            "borderRadius": 4,
            "borderWidth": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
        ]
      }
      testID="aws-btn-text"
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.075)",
            "height": 56,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 200,
          }
        }
        testID="aws-btn-active-background"
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.15)",
            "height": 56,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": -200,
              },
            ],
            "width": 200,
            "zIndex": 1,
          }
        }
        testID="aws-btn-progress"
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.15)",
            "height": 20,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "width": 100,
          }
        }
        testID="aws-btn-content-placeholder"
      />
    </View>
  </View>
</View>
`;

exports[`AwesomeButton should render a default text children 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "relative",
      },
      Object {
        "height": 60,
        "width": 200,
      },
      null,
    ]
  }
  testID="aws-btn-content-view"
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.15)",
        "borderRadius": 4,
        "bottom": -2,
        "height": 56,
        "left": 2,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": 196,
      }
    }
    testID="aws-btn-shadow"
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#9f9f9f",
          "borderRadius": 4,
          "height": 56,
          "width": 200,
        },
      ]
    }
    testID="aws-btn-bottom"
  />
  <View
    style={
      Object {
        "borderRadius": 4,
        "height": 56,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": 200,
      }
    }
    testID="aws-btn-content"
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "overflow": "hidden",
            "zIndex": 3,
          },
          Object {
            "backgroundColor": "#c0c0c0",
            "borderColor": null,
            "borderRadius": 4,
            "borderWidth": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
        ]
      }
      testID="aws-btn-text"
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.075)",
            "height": 56,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 200,
          }
        }
        testID="aws-btn-active-background"
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.15)",
            "height": 56,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": -200,
              },
            ],
            "width": 200,
            "zIndex": 1,
          }
        }
        testID="aws-btn-progress"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 14,
            "fontWeight": "bold",
            "opacity": 1,
            "textAlign": "center",
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
            "zIndex": 10,
          }
        }
        testID="aws-btn-content-text"
      >
        Default
      </Text>
    </View>
  </View>
</View>
`;
